--- a/src/app/pagamento/pagamento.component.html
+++ b/src/app/pagamento/pagamento.component.html
@@ -1,3 +1,62 @@
-<div>
+ <div>
     <h1>Pagamento PG</h1>
+    
+    <form name="formPgto" class="">
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="idPgto" [(ngModel)]="pgto.id_pgto">
+        </mat-form-field>
+
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="cont" [(ngModel)]="pgto.id_contrato">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="cli" [(ngModel)]="pgto.id_cliente">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="ref" [(ngModel)]="pgto.mes_ref">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput  name="venc" [(ngModel)]="pgto.dt_venc">
+        </mat-form-field>
+        <mat-form-field>
+                <input matInput  name="picker" [(ngModel)]="picker">
+             <!--
+                <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>-->
+        </mat-form-field> 
+
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="dtPgto" [(ngModel)]="pgto.dt_pgto">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="mens" [(ngModel)]="pgto.valor_mensal">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="desc" [(ngModel)]="pgto.valor_desconto">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="multa" [(ngModel)]="pgto.valor_multa">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="juros" [(ngModel)]="pgto.valor_juros">
+        </mat-form-field>
+        
+        <mat-form-field class="">
+            <input matInput placeholder="informe..." type="text" name="vlrPgto" [(ngModel)]="pgto.valor_pgto">
+        </mat-form-field>
+    </form>
+<!--     
+    <mat-form-field>
+            <input matInput [matDatepicker]="pgto.dt_venc">
+            <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+            <mat-datepicker #myDatepicker></mat-datepicker>
+          </mat-form-field> -->
 </div>
