--- a/src/app/pagamento/pagamento.component.html
+++ b/src/app/pagamento/pagamento.component.html
@@ -1,11 +1,9 @@
- <div>
+<div>
     <h1>Pagamento PG</h1>
-    
     <form name="formPgto" class="">
         <mat-form-field class="">
             <input matInput placeholder="informe..." type="text" name="idPgto" [(ngModel)]="pgto.id_pgto">
         </mat-form-field>
-
         <mat-form-field class="">
             <input matInput placeholder="informe..." type="text" name="cont" [(ngModel)]="pgto.id_contrato">
         </mat-form-field>
@@ -17,16 +15,10 @@
         <mat-form-field class="">
             <input matInput placeholder="informe..." type="text" name="ref" [(ngModel)]="pgto.mes_ref">
         </mat-form-field>
-        
-        <mat-form-field class="">
-            <input matInput  name="venc" [(ngModel)]="pgto.dt_venc">
-        </mat-form-field>
         <mat-form-field>
-                <input matInput  name="picker" [(ngModel)]="picker">
-             <!--
-                <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>-->
+            <input matInput [matDatepicker]="picker" placeholder="Data Vencimento" [(ngModel)]="pgto.dt_venc">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
         </mat-form-field> 
 
         <mat-form-field class="">
@@ -52,11 +44,16 @@
         <mat-form-field class="">
             <input matInput placeholder="informe..." type="text" name="vlrPgto" [(ngModel)]="pgto.valor_pgto">
         </mat-form-field>
+
     </form>
-<!--     
-    <mat-form-field>
-            <input matInput [matDatepicker]="pgto.dt_venc">
-            <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
-            <mat-datepicker #myDatepicker></mat-datepicker>
-          </mat-form-field> -->
+   
 </div>
+ <!-- 
+    
+
+
+
+
+    </form>
+      
+</div> -->
